Fix: исправлены замечания SonarCloud (toList(), пустой конструктор Category)